--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "commander": "^2.8.1",
     "glob": "^5.0.14",
+    "mkdirp": "^0.5.1",
     "twig": "^0.8.2"
   },
   "license": "MIT",
